# video-dubber

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  README.md  cli.py  config.example.yaml  config.local.yaml  docker-compose.yml  final_implementation_plan_v3_video_dubber.md  pyproject.toml
.github/workflows/: ci.yml
configs/profiles/: local-openai-compatible.yaml
docs/: runbook.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
dubber/: __init__.py
dubber/asr/: timestamps.py  word_chunk_payloads.py  word_chunking.py
dubber/audio/: __init__.py  silero_vad.py  vad.py
dubber/core/: __init__.py  concurrency.py  config.py  enums.py  io.py  models.py  paths.py
dubber/domain/: __init__.py  calculus.yaml  profiles.py
dubber/mixing/: ducking.py
dubber/observability/: logger.py
dubber/orchestrator/: artifact_manifest.py  checkpoint_store.py  segment_checkpoint_store.py  stage_artifacts.py
dubber/pipeline/: __init__.py  job_manager.py  resume_plan.py  review_session.py  stage_context.py  stages.py
dubber/prompts/: compress_translation.md  glossary_extract.md  translate_block.md
dubber/providers/: asr_openai_compatible.py  base.py  factory.py  ffmpeg.py  llm_openai_compatible.py  retry.py  tts_openai_compatible.py
schemas/: dubbing_cues.schema.json  dubbing_cues.v2.schema.json  glossary.schema.json  review.locked.schema.json  review.required.schema.json  source_normalization.v1.schema.json  speech_timeline.v1.schema.json  spoken_cues.schema.json  translated.schema.json  translated.v2.schema.json
web/: app.py
(+70 files in other folders)
